--- a/RentalBookApp/public/css/common.css
+++ b/RentalBookApp/public/css/common.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+/* @charset "utf-8";
 
 html, body {
     background-color: #fff;
@@ -55,4 +55,21 @@ html, body {
 
 .image{
     float:left;
+    }
+    .mypage-menu {
+        width: 150px !important;
+      }
+.top-right ul li{
+    float: left;
+    width: 120px;
+    height: 50px;
+    display: flex
+}
+    
+.top-right ul{
+    list-style-type: none;
+    } 
+    .top-right a{
+        text-decoration: none;
+        color: black;
     }
