--- a/RentalBookApp/public/css/common.css
+++ b/RentalBookApp/public/css/common.css
@@ -73,3 +73,8 @@ html, body {
         text-decoration: none;
         color: black;
     }
+#wrapper {
+        height: 200px;
+        width: 300px;
+        overflow-y: scroll;
+      }
