--- a/RentalBookApp/public/css/bookupload.css
+++ b/RentalBookApp/public/css/bookupload.css
@@ -2,6 +2,16 @@
     padding-top: 80px;
 }
 
+.image-wrapper{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.image-wrapper img{
+    width: 350px;
+    height: 350px;
+}
+
 .form-group {
     margin-bottom: 30px;
 }
