--- a/RentalBookApp/public/css/bookform.css
+++ b/RentalBookApp/public/css/bookform.css
@@ -1,10 +1,12 @@
 .form-wrapper {
     padding-top: 80px;
+    padding-bottom: 40px;
+    background-color: white;
 }
 
 .image-wrapper{
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .image-wrapper img{
@@ -14,4 +16,9 @@
 
 .form-group {
     margin-bottom: 30px;
+}
+
+.label-wrapper{
+    padding-right: 0px;
+    text-align: right;
 }
