議事録18回目の対応

--- a/RentalBookApp/public/css/common.css
+++ b/RentalBookApp/public/css/common.css
@@ -11,3 +11,12 @@ table{
 ul {
     list-style: none;
   }
+
+.header-color{
+    background-color: #2dd354;
+    
+}
+
+.header-font,.nav-link{
+    color: white;
+}
