--- a/RentalBookApp/public/css/common.css
+++ b/RentalBookApp/public/css/common.css
@@ -1,7 +1,6 @@
 .topimage{
-    padding-left: 30px;
     line-height: 30px;
-    width:100px;
+    width:70px;
     height: 50px;
 }
 
@@ -19,4 +18,8 @@ ul {
 
 .header-font,.nav-link{
     color: white;
+}
+
+.navbar-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
